Page shift fix

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -219,7 +219,6 @@ input[type=submit]{
 
 body.modal-open{
     width:100%!important;
-    padding-right:0!important;
     overflow: hidden;
     position:fixed!important;
     padding-right: 55px;
